one rubric of personnel + fix chrono in idex + fix duplication listener in class + occaz : fix display when buying and selling + openSpecificMachine function ready

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -78,7 +78,7 @@
                     <div id="supplier" class="rubric">
                         <div class="elec clickable selected" style="display:block;">Electricite</div>
                         <div class="eau clickable" style="display:block;">Eau</div>
-                        <div class="carton clickable" style="display:block;">Cartons</div>
+                        <div class="cartons clickable" style="display:block;">Cartons</div>
                         <div class="etain clickable" style="display:block;">Etain - Quincaillerie</div>
 
                         <div class="perso clickable" style="display: none;">Personnel</div>
@@ -97,7 +97,7 @@
                     <!-- ----------------------------------------------------------------------- -->
                     <div id="left-page" class="rubric">
                         <!-- ----------------------------- Ressources ------------------------------ -->
-                        <div disable class="elec 1 clickable" style="display:block;">
+                        <div class="elec 1 clickable" style="display:block;">
                             <p>Coup de Foudre</p>
                             <p style="display: none;">Rapide description de coup de foudre</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -108,7 +108,7 @@
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div disable class="eau 1 clickable" style="display: none;">
+                        <div class="eau 1 clickable" style="display: none;">
                             <p>Hache 2 Eaux</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -119,7 +119,7 @@
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div disable class="cartons 1 clickable" style="display: none;">
+                        <div class="cartons 1 clickable" style="display: none;">
                             <p>Jean Balle</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -130,7 +130,7 @@
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div disable class="etain 1 clickable" style="display: none;">
+                        <div class="etain 1 clickable" style="display: none;">
                             <p>Casto la bas</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -142,12 +142,12 @@
                         </div>
 
                         <!-- ------------------------------ Personnel ------------------------------ -->
-                        <div class="maint 1 clickable" style="display: none;">
+                        <div class="maint clickable" style="display: none;">
                             <p>Maintenance</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="menage 1 clickable" style="display: none;">
+                        <div class="menage clickable" style="display: none;">
                             <p>Menage</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -209,12 +209,14 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="occaz j1 clickable" style="display: none;">
-                            <p>Rien n'est a vendre<br>pour le moment</p>
+                            <p>Rien n'est a vendre</p>
+                            <p>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
                         <div disable class="occaz j2 clickable" style="display: none;">
-                            <p>Rien n'est a vendre<br>pour le moment</p>
+                            <p>Rien n'est a vendre</p>
+                            <p>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
@@ -272,12 +274,12 @@
 
                         <!-- ------------------------------ Personnel ------------------------------ -->
 
-                        <div class="inge 1 clickable" style="display: none;">
+                        <div class="inge clickable" style="display: none;">
                             <p>Ingenieur</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="super 1 clickable" style="display: none;">
+                        <div class="super clickable" style="display: none;">
                             <p>Superviseur</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -285,13 +287,13 @@
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
 
-                        <div disable class="manix 2 clickable" style="display: none;">
+                        <div class="manix 2 clickable" style="display: none;">
                             <p>Assembleur mecanique</p>
                             <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div disable class="manix 3 clickable" style="display: none;">
+                        <div class="manix 3 clickable" style="display: none;">
                             <p>Assembleur general</p>
                             <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
@@ -340,12 +342,14 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="occaz j1 clickable" style="display: none;">
-                            <p>Rien n'est a vendre<br>pour le moment</p>
+                            <p>Rien n'est a vendre</p>
+                            <p>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
                         <div disable class="occaz j4 void clickable" style="display: none;">
-                            <p>Rien n'est a vendre<br>pour le moment</p>
+                            <p>Rien n'est a vendre</p>
+                            <p>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
@@ -353,15 +357,13 @@
                     </div>
                 </div>
             </div>
-            <dialog id="confirm-buy">
+            <dialog id="confirm-buy" class="modal">
                 <div class="modal-content">
                     <h2>Devis</h2>
-                    <span class="close-button" id="close-confirm">&times;</span>
-
                     <div id="confirm-div" style="display: block;">
                         <p id="buying"></p>
-                        <button class="oui-button">Oui</button>
-                        <button class="non-button">Non</button>
+                        <button id="oui-buy">Oui</button>
+                        <button id="non-buy">Non</button>
                     </div>
                     <div id="input-div" style="display: none;">
                         <p>Pour quel prix ?</p>
@@ -373,19 +375,7 @@
                 </div>
             </dialog>
         </dialog>
-
-        <button class="button" id="player-button">See others players</button>
-        <dialog class="modal" id="player-modal">
-            <div class="modal-content">
-                <div class="top-modal">
-                    <h2 class="title-modal">Qu'est ce que font les autres ?</h2>
-                    <span class="close-button" id="close-player">&times;</span>
-                </div>
-                <ul id="display-player"></ul>
-            </div>
-        </dialog>
     </div>
-
 
     <dialog class="modal" id="chat-modal">
         <div class="modal-content">
@@ -421,15 +411,15 @@
         <i class="param-content fa-solid fa-cloud" style="display:none;"></i>
         <i class="param-content fa-solid fa-sun" style="display:none;"></i>
         <i class="fa-solid fa-gears"></i>
-        <dialog id="confirm-disconnect">
-            <div class="modal-content">
-                <p>Voulez vous vraiment vous deconnecter ?</p>
-
-                <button class="oui-button button">Oui</button>
-                <button class="non-button button">Non</button>
-            </div>
-        </dialog>
     </div>
+    <dialog id="confirm-disconnect" class="modal">
+        <div class="modal-content">
+            <p>Voulez vous vraiment vous deconnecter ?</p>
+
+            <button id="oui-disconnect" class="button">Oui</button>
+            <button id="non-disconnect" class="button">Non</button>
+        </div>
+    </dialog>
 
     <!-- ------------------------------- Script -------------------------------- -->
     <script src="JS/game.js" type="module"></script>
