--- a/views/game.ejs
+++ b/views/game.ejs
@@ -462,10 +462,11 @@
     </div>
     <dialog id="confirm-disconnect" class="modal">
         <div class="modal-content">
-            <p>Voulez vous vraiment vous deconnecter ?</p>
-
-            <button id="oui-disconnect" class="button">Oui</button>
-            <button id="non-disconnect" class="button">Non</button>
+            <p>Voulez vous vraiment vous déconnecter ?</p>
+            <div>
+                <button id="oui-disconnect" class="button">Oui</button>
+                <button id="non-disconnect" class="button">Non</button>
+            </div>
         </div>
     </dialog>
 
