--- a/views/game.ejs
+++ b/views/game.ejs
@@ -50,7 +50,7 @@
         <h1 id="title_menuShop">Titre</h1>
         <div>
             <div id="icon1">
-                <ion-icon name="pricetag-outline"></ion-icon>
+                <ion-icon id="icon1_img" name="pricetag-outline"></ion-icon>
             </div>
 
         </div>
