see other player http

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -424,6 +424,7 @@
     <!-- ------------------------------- Script -------------------------------- -->
     <script src="JS/game.js" type="module"></script>
     <script src="JS/http.js"></script>
+    <script src="JS/http_module.js" type="module"></script>
 </body>
 
 </html>
