--- a/views/game.ejs
+++ b/views/game.ejs
@@ -190,12 +190,12 @@
                         <div class="maint clickable" style="display: none;">
                             <p>Maintenance</p>
                             <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
+                            <button class="buy-button" style="display: none;">Recruter</button>
                         </div>
                         <div class="menage clickable" style="display: none;">
                             <p>Menage</p>
                             <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
+                            <button class="buy-button" style="display: none;">Recruter</button>
                         </div>
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
@@ -254,14 +254,14 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="occaz j1 clickable" style="display: none;">
-                            <p>Rien n'est a vendre</p>
-                            <p>pour le moment</p>
+                            <p></p>
+                            <p></p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
                         <div disable class="occaz j2 clickable" style="display: none;">
-                            <p>Rien n'est a vendre</p>
-                            <p>pour le moment</p>
+                            <p></p>
+                            <p></p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
@@ -322,12 +322,12 @@
                         <div class="inge clickable" style="display: none;">
                             <p>Ingenieur</p>
                             <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
+                            <button class="buy-button" style="display: none;">Recruter</button>
                         </div>
                         <div class="super clickable" style="display: none;">
                             <p>Superviseur</p>
                             <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
+                            <button class="buy-button" style="display: none;">Recruter</button>
                         </div>
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
@@ -387,14 +387,14 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="occaz j1 clickable" style="display: none;">
-                            <p>Rien n'est a vendre</p>
-                            <p>pour le moment</p>
+                            <p></p>
+                            <p></p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
                         <div disable class="occaz j4 void clickable" style="display: none;">
-                            <p>Rien n'est a vendre</p>
-                            <p>pour le moment</p>
+                            <p></p>
+                            <p></p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
