see other players

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -473,6 +473,9 @@
     <div class="cameraName">
         Camera 1
     </div>
+    <div class="cameraName usineDiv" style="cursor:pointer">
+        Retourner à mon usine
+    </div>
     <!-- Debug -->
     <script type="text/javascript" src="JS/game/stats.min.js"></script>
 
