--- a/views/game.ejs
+++ b/views/game.ejs
@@ -575,7 +575,6 @@
         <div class="modal-content">
             <div class="top-modal">
                 <h2 class="title-modal">Résultats</h2>
-                <span class="close-button" id="close-results">&times;</span>
             </div>
             <p id="context"></p>
             <div id="playerListDiv" style="display:none;"></div>
@@ -589,6 +588,7 @@
         <i class="param-content fa-solid fa-volume-high" style="display:none;"></i>
         <i class="param-content fa-solid fa-volume-off" style="display:none;"></i>
         <i class="param-content fa-solid fa-right-from-bracket" style="display:none;"></i>
+        <i class="param-content fa-solid fa-right-from-bracket" style="display: none;"></i>
         <i class="param-content fa-solid fa-cloud" style="display:none;"></i>
         <i class="param-content fa-solid fa-sun" style="display:none;"></i>
         <i class="fa-solid fa-gears"></i>
