fix messages in english

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -574,7 +574,7 @@
     <dialog class="modal" id="results-modal">
         <div class="modal-content">
             <div class="top-modal">
-                <h2 class="title-modal">Résultats</h2>
+                <h2 class="title-modal">Resultats</h2>
             </div>
             <p id="context"></p>
             <div id="playerListDiv" style="display:none;"></div>
