--- a/views/game.ejs
+++ b/views/game.ejs
@@ -583,6 +583,15 @@
         </div>
     </dialog>
 
+    <dialog class="modal" id="events-modal">
+        <div class="param-content">
+            <div class="top-modal">
+                <h2 class="title-modal">Résultats</h2>
+                <span class="close-button" id="close-events">&times;</span>
+            </div>
+        </div>
+    </dialog>
+
     <div id="parameters">
         <i class="param-content fa-solid fa-bell" style="display:none;"></i>
         <i class="param-content fa-solid fa-bell-slash" style="display:none;"></i>
