--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -443,9 +443,11 @@ body {
         }
     }
 }
-.clickable{
-    cursor:pointer;
+
+.clickable {
+    cursor: pointer;
 }
+
 .selected {
     background-color: @primary-color;
     color: @bg-color
@@ -455,60 +457,71 @@ body {
     content: "> ";
     white-space: pre;
 }
+
 .selected::after {
     content: " <";
     white-space: pre;
 }
-#results-modal{
-    .modal-content{
+
+#results-modal {
+    .modal-content {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        .top-modal{
+
+        .top-modal {
             text-align: center;
             align-items: center;
-            margin:0;
-            padding:0;
-            h2{
+            margin: 0;
+            padding: 0;
+
+            h2 {
                 font-family: "Koulen";
-                font-size:2rem;
+                font-size: 2rem;
             }
         }
-        p{
+
+        p {
             font-family: "Koulen";
-            font-size:1.2rem;
+            font-size: 1.2rem;
             letter-spacing: 7px;
-            margin-top:-10px;
+            margin-top: -10px;
         }
-        #playerListDiv{
-            p{
+
+        #playerListDiv {
+            p {
                 margin-top: 10px;
-                color:white;
+                color: white;
                 font-family: @primary-font;
-                font-size:1.2rem;
+                font-size: 1.2rem;
                 letter-spacing: normal;
                 cursor: pointer;
             }
-            p:hover::before{
-                content:"> ";
+
+            p:hover::before {
+                content: "> ";
                 white-space: pre;
             }
-            p:hover::after{
-                content:" <";
+
+            p:hover::after {
+                content: " <";
                 white-space: pre;
             }
         }
-        i{
-            color:white;
-            margin-top:20px;
-            font-size:2.6rem;
-            &:hover{
-                color:@primary-color;
+
+        i {
+            color: white;
+            margin-top: 20px;
+            font-size: 2.6rem;
+
+            &:hover {
+                color: @primary-color;
                 cursor: pointer;
             }
         }
     }
+
     &::backdrop {
         background-color: rgba(0, 0, 0, 0.623);
     }
@@ -523,8 +536,9 @@ body {
     color: @primary-color;
     cursor: default;
     font-family: @primary-font;
-    font-weight: bold;  
+    font-weight: bold;
 }
+
 #confirm-buy {
     &::backdrop {
         background-color: rgba(0, 0, 0, 0.466);
@@ -562,7 +576,7 @@ body {
             border-left: none;
             border-right: none;
             border-top: none;
-            outline:none;
+            outline: none;
         }
 
         input[type=number]::-webkit-inner-spin-button {
@@ -580,7 +594,7 @@ body {
             background-color: @primary-color;
             font-size: .9rem;
             font-weight: bold;
-            margin-left:15px;
+            margin-left: 15px;
 
             &:hover {
                 background-color: transparent;
@@ -634,27 +648,74 @@ body {
     }
 }
 
+#events-modal {
+    .modal-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+            text-align: center;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+
+            font-family: "Koulen";
+            font-size: 2rem;
+        }
+
+        #events-content {
+            p {
+                font-family: "Koulen";
+                font-size: 1.2rem;
+                letter-spacing: 7px;
+                margin-top: -10px;
+            }
+        }
+    }
+
+
+    &::backdrop {
+        background-color: rgba(0, 0, 0, 0.623);
+    }
+
+    padding: 40px;
+    width:400px;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: @bg-color;
+    border: 2px solid @bg-color;
+    color: @primary-color;
+    cursor: default;
+    font-family: @primary-font;
+    font-weight: bold;
+}
 
 #confirm-disconnect {
     flex-direction: row;
     justify-content: space-around;
     margin: auto;
-    position:absolute;
+    position: absolute;
     background-color: @bg-color;
-    padding:1rem;
+    padding: 1rem;
     border-radius: 10px;
-    color:white;
-    border:none;
+    color: white;
+    border: none;
     font-weight: bold;
-    .modal-content{
+
+    .modal-content {
         display: flex;
         flex-direction: column;
+
         div {
-            margin-top:20px;
+            margin-top: 20px;
             width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-around;
+
             button {
                 width: 45%;
                 height: 40px;
@@ -665,17 +726,17 @@ body {
                 background-color: @primary-color;
                 font-size: .9rem;
                 font-weight: bold;
-                outline:none;
+                outline: none;
+
                 &:hover {
                     background-color: transparent;
                     color: @primary-color;
                     transition: background-color 0.3s;
                 }
-        
+
             }
         }
     }
-
 }
 
 #shop-modal {
@@ -721,7 +782,7 @@ body {
             display: grid;
             align-content: center;
             grid-template-columns: 2fr 2fr 1fr;
-           // grid-auto-rows: minmax(0px, auto);
+            // grid-auto-rows: minmax(0px, auto);
             text-transform: uppercase;
 
             .title_ressources {
@@ -806,7 +867,7 @@ body {
             #right-page {
                 background-color: @primary-color;
 
-                &>div{
+                &>div {
 
                     margin: 1rem;
                     border: solid 1px @primary-color;
@@ -819,9 +880,9 @@ body {
                     background-color: rgba(255, 255, 255, 0.603);
                     color: @bg-color;
                     font-size: 1rem;
-        
-                    p{
-        
+
+                    p {
+
                         height: auto;
                         font-weight: normal;
                         font-size: 1rem;
@@ -853,6 +914,8 @@ body {
         }
     }
 }
+
+
 
 /* -------------------------------------------------------------------------- */
 /*                                    Chat                                    */
