--- a/views/game.ejs
+++ b/views/game.ejs
@@ -584,9 +584,8 @@
 
     <dialog class="modal" id="events-modal">
         <div class="param-content">
-            <div class="top-modal">
-                <h2 class="title-modal">Résultats</h2>
-                <span class="close-button" id="close-events">&times;</span>
+            <h2 class="title-modal">Evenement</h2>
+            <div id="events-content">
             </div>
         </div>
     </dialog>
@@ -596,7 +595,6 @@
         <i class="param-content fa-solid fa-bell-slash" style="display:none;"></i>
         <i class="param-content fa-solid fa-volume-high" style="display:none;"></i>
         <i class="param-content fa-solid fa-volume-off" style="display:none;"></i>
-        <i class="param-content fa-solid fa-right-from-bracket" style="display:none;"></i>
         <i class="param-content fa-solid fa-right-from-bracket" style="display: none;"></i>
         <i class="param-content fa-solid fa-cloud" style="display:none;"></i>
         <i class="param-content fa-solid fa-sun" style="display:none;"></i>
