--- a/views/game.ejs
+++ b/views/game.ejs
@@ -38,6 +38,7 @@
     </div>
 
 
+
     <!-- <div style="position:absolute;margin-top:50px;font-weight:bold;">
         <p style="color:red">X axis</p>
         <p style="color:green">Y axis</p>
@@ -89,6 +90,23 @@
                     <p class="textPro">Ecologique</p>
                 </div>
             </div>
+            <div id="main_board">
+                <h1>Tableau de Bord</h1>
+                <div class="main_content">
+                    <div>
+                        <h2>> Depenses previsionnelles :</h2>
+                        <p>12000 €</p><br>
+                    </div>
+                    <div>
+                        <h2>> Nombre d'employes :</h2>
+                        <p>24</p><br>
+                    </div>
+                    <div>
+                        <h2>> Consommation d'energie atuelle :</h2>
+                        <p>12 kW/h</p><br>
+                    </div>
+                </div>
+            </div>
             <div class="containers"
                 style="width:auto;margin-top:10px;justify-content:space-around;flex-direction:column-reverse;">
                 <div>
@@ -103,6 +121,7 @@
 
         </div>
 
+       
 
         <!-- open style="position:absolute;margin-top:-400px;z-index:200"  -->
         <!-- Modal Shop -->
