remove some accents

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -102,7 +102,7 @@
                         <p>24</p><br>
                     </div>
                     <div>
-                        <h2>> Consommation d'energie atuelle :</h2>
+                        <h2>> Consommation d'energie actuelle :</h2>
                         <p>12 kW/h</p><br>
                     </div>
                 </div>
