--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -406,6 +406,7 @@ body h1 {
   font-size: 2rem;
 }
 #results-modal .modal-content p {
+  text-align: center;
   font-family: "Koulen";
   font-size: 1.2rem;
   letter-spacing: 7px;
