--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -483,6 +483,7 @@ body {
         }
 
         p {
+            text-align: center;
             font-family: "Koulen";
             font-size: 1.2rem;
             letter-spacing: 7px;
