shop style buttons

--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -534,6 +534,20 @@ body h1 {
   color: #f5dba6;
   transition: background-color 0.3s;
 }
+.item-description {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-evenly;
+  height: 100%;
+}
+.item-description button {
+  bottom: 0;
+}
+.item-title {
+  justify-content: center;
+  align-content: center;
+}
 #events-modal {
   padding: 40px;
   width: 400px;
@@ -744,7 +758,7 @@ body h1 {
   font-family: "Koulen";
   font-weight: bold;
   font-size: 1rem;
-  margin-bottom: -15px;
+  margin-top: auto;
 }
 #shop-modal .modal-content #shop .buy-button:hover {
   background-color: white;
