--- a/views/game.ejs
+++ b/views/game.ejs
@@ -95,15 +95,19 @@
                 <div class="main_content">
                     <div>
                         <h2>> Depenses previsionnelles :</h2>
-                        <p>12000 €</p><br>
+                        <p><span id="prev-expe"></span> €</p><br>
+                    </div>
+                    <div>
+                        <h2>> Revenus previsionnels :</h2>
+                        <p><span id="prev-income"></span>€</p><br>
                     </div>
                     <div>
                         <h2>> Nombre d'employes :</h2>
-                        <p>24</p><br>
+                        <p id="nb-employee"></p><br>
                     </div>
                     <div>
                         <h2>> Consommation d'energie actuelle :</h2>
-                        <p>12 kW/h</p><br>
+                        <p><span id="actual-elec"></span> kW/h  |  <span id="actual-water"></span> dam/3  |  <span id="actual-etain"></span> bobines  |  <span id="actual-card"></span> cartons</p><br>
                     </div>
                 </div>
             </div>
