--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -1235,8 +1235,14 @@ body {
 
             }
 
-            p {
+            p,table tr td {
                 color: white;
+                text-align: left;
+            }
+
+            .txt_align_center{
+                text-align: center;
+                padding:0 10px 0 0 ;
             }
         }
     }
