change function, simplify and equilibage

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -180,10 +180,6 @@
 
         </div>
 
-
-
-        <!-- open style="position:absolute;margin-top:-400px;z-index:200"  -->
-        <!-- Modal Shop -->
         <dialog class="modal" id="shop-modal">
             <div class="modal-content">
                 <div class="top-modal">
@@ -513,7 +509,7 @@
                         </div>
                         <div class="super clickable" style="display: none;">
                             <div class="item-title" style="display: block;">
-                                <p>Superviseur</p>
+                                <p>Administratif</p>
                             </div>
                             <div class="item-description" style="display:none;">
                                 <p>Rapide description</p>
@@ -637,7 +633,7 @@
                     <div id="input-div" style="display: none;">
                         <p>Pour quel prix ?</p>
                         <form id="price-form" action="">
-                            <input type="number" id="input-price" autocomplete="off" placeholder="Prix de vente" />
+                            <input type="number" id="input-price" autocomplete="off" placeholder="Prix de vente" min="0" />
                             <button class="button">Vendre</button>
                         </form>
                     </div>
