focus input of chattt

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -663,7 +663,7 @@
                 <span class="close-button" id="close-chat">&times;</span>
             </div>
             <form id="chatForm" action="">
-                <input id="input-chat" autocomplete="off" placeholder="Message" /><button
+                <input id="input-chat" autocomplete="off" placeholder="Message" autofocus /><button
                     class="button">Envoyer</button>
             </form>
             <div id="messages"></div>
